<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="vm" type="name.atsushieno.fluidsynthmidideviceservicej.ApplicationModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/midi_service_settings"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/testing"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soundfont" />

                <Spinner
                    android:id="@+id/spinner_soundfont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/entry_sampling_rate"
                    android:text="@string/sampling_rate" />

                <EditText
                    android:id="@+id/entry_sampling_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textAlignment="viewEnd"
                    android:text="@={vm.sampleRateString}"
                    tools:text="44100"
                    android:importantForAutofill="no" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/switch_exclusive_audio_use"
                    android:text="@string/exclusive_audio_use" />

                <Switch
                    android:id="@+id/switch_exclusive_audio_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={vm.audioExclusiveUse}"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/spinner_performance_mode"
                    android:text="@string/performance_mode" />

                <Spinner
                    android:id="@+id/spinner_performance_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/seekbar_audio_gain"
                    android:text="@string/audio_gain_0_100" />

                <SeekBar
                    android:id="@+id/seekbar_audio_gain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="@={vm.audioGainPercentage}" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/entry_frames_per_buffer"
                    android:text="@string/frames_per_buffer" />

                <EditText
                    android:id="@+id/entry_frames_per_buffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={vm.framesPerBufferString}"
                    android:textAlignment="viewEnd" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simple_chord" />

                <Button
                    android:id="@+id/button_direct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direct" />

                <Button
                    android:id="@+id/button_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/via_platform_api" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play_midi_file" />

                <Spinner
                    android:id="@+id/spinner_songs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_play_smf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play" />

            </TableRow>
        </TableLayout>

    </android.support.constraint.ConstraintLayout>
</layout>
